// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[routes] <Index /> renders correctly with news results 1`] = `
Array [
  <header
    class="PageHeader"
  >
    <h1>
      <span>
        My name is Viii: a painter of frequencies and thoughts
      </span>
    </h1>
  </header>,
  <div
    class="Home"
  >
    <section
      class="Home-news"
    >
      <div
        class="Home-news-content"
      >
        <h2>
          <span>
            Latest news
          </span>
        </h2>
        <div
          class="Home-news-items"
        >
          <article
            class="NewsListing isCondensed"
          >
            <a
              href="/news/new-website-launched"
            >
              <header
                class="NewsListing-header"
              >
                <h3>
                  <div
                    class="Type Type-news"
                    title="News"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:middle"
                      viewBox="0 0 40 40"
                      width="1em"
                    >
                      <g>
                        <path
                          d="m21.6 21.6v-10h-3.2v10h3.2z m0 6.8v-3.4h-3.2v3.4h3.2z m16.8-8.4l-4.1 4.6 0.5 6.2-6 1.3-3.1 5.3-5.7-2.4-5.7 2.4-3.1-5.2-6-1.4 0.5-6.2-4.1-4.6 4.1-4.7-0.5-6.1 6-1.3 3.1-5.3 5.7 2.4 5.7-2.4 3.1 5.3 6 1.3-0.5 6.2z"
                        />
                      </g>
                    </svg>
                  </div>
                  <span>
                    New website launched
                  </span>
                </h3>
              </header>
              <img
                alt="New website launched"
                src="https://s3.amazonaws.com/mynameisviii-static/news/new-website-launched.jpg"
              />
              <p>
                <span>
                  The new official Viii website is now live!
                </span>
              </p>
            </a>
          </article>
        </div>
      </div>
    </section>
    <section
      class="Home-bio"
    >
      <div
        class="Home-bio-content"
      >
        <h2>
          <span>
            Biography
          </span>
        </h2>
        <p>
          <span>
            Viii is a New Zealand-born singer, songwriter, multi-instramentalist and producer. Known for his ability to take characteristics from his eclectic musical background to create a broad palette to paint an interesting and unique canvas.
          </span>
        </p>
        <p>
          <span>
            Drawing from influences such as ✝✝✝ (Crosses), Nine Inch Nails, Puscifer, Banks, Etta Bond, Massive Attack, Portishead and many more, creating a colourful source of inspiration.
          </span>
        </p>
        <p>
          <span>
            Lyrically, Viii has a distinct common ground of self-reflection and understanding, often abstracting the subject in some form – either writing symbolically or from an alternate perspective about personal life experiences or abstract thoughts.
          </span>
        </p>
        <p>
          <span>
            Outside of the music, Viii also handles his own artistic direction and other aspects surrounding performances, such as photography, graphic design, makeup artistry and fashion.
          </span>
        </p>
        <p>
          <span>
            Viii currently releases music under his own independent label, Voodoo Creation Records.
          </span>
        </p>
      </div>
    </section>
    <section
      class="Home-connect"
    >
      <div
        class="Home-connect-content"
      >
        <h2>
          <span>
            Connect with Viii
          </span>
        </h2>
        <div
          class="Home-connect-websites"
        >
          <article
            class="WebsiteListing"
          >
            <a
              href="https://open.spotify.com/artist/59s4iD384WECjyZyUmZ18G?si=rlWWtIUNS1uvdLD5BzqxvQ"
              rel="noopener"
              target="_blank"
              title="Connect with Viii on Spotify"
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle"
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="m28.2 27q0-0.7-0.7-1.1-4.3-2.6-10-2.6-3 0-6.4 0.8-0.9 0.2-0.9 1.1 0 0.5 0.3 0.8t0.8 0.3q0.1 0 0.8-0.2 2.9-0.6 5.4-0.6 5.1 0 8.9 2.3 0.4 0.3 0.7 0.3 0.4 0 0.7-0.3t0.4-0.8z m2.1-4.8q0-0.9-0.8-1.4-5.3-3.1-12.2-3.1-3.4 0-6.8 0.9-1 0.3-1 1.5 0 0.5 0.3 0.9t1 0.4q0.1 0 0.8-0.2 2.7-0.7 5.6-0.7 6.2 0 10.9 2.8 0.5 0.3 0.9 0.3 0.5 0 0.9-0.4t0.4-1z m2.4-5.5q0-1.1-0.9-1.6-2.8-1.6-6.5-2.5t-7.7-0.8q-4.5 0-8.1 1.1-0.5 0.1-0.9 0.5t-0.3 1.1q0 0.7 0.5 1.2t1.1 0.4q0.2 0 0.9-0.1 3-0.9 6.8-0.9 3.6 0 7 0.8t5.6 2.1q0.5 0.3 0.9 0.3 0.7 0 1.1-0.5t0.5-1.1z m4.6 3.3q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                  />
                </g>
              </svg>
              <span
                class="WebsiteListing-title"
              >
                <span>
                  Spotify
                </span>
              </span>
            </a>
          </article>
          <article
            class="WebsiteListing"
          >
            <a
              href="https://facebook.com/mynameisviii"
              rel="noopener"
              target="_blank"
              title="Connect with Viii on Facebook"
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle"
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="m30.9 2.9q2.6 0 4.5 1.8t1.9 4.6v21.4q0 2.7-1.9 4.6t-4.5 1.8h-4.2v-13.2h4.4l0.7-5.2h-5.1v-3.3q0-1.3 0.5-1.9t2-0.6l2.8 0v-4.7q-1.5-0.2-4-0.2-3.1 0-4.9 1.8t-1.8 5.1v3.8h-4.5v5.2h4.5v13.2h-11.9q-2.6 0-4.5-1.8t-1.9-4.6v-21.4q0-2.7 1.9-4.6t4.5-1.8h21.5z"
                  />
                </g>
              </svg>
              <span
                class="WebsiteListing-title"
              >
                <span>
                  Facebook
                </span>
              </span>
            </a>
          </article>
          <article
            class="WebsiteListing"
          >
            <a
              href="https://twitter.com/mynameisviii"
              rel="noopener"
              target="_blank"
              title="Connect with Viii on Twitter"
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle"
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="m37.7 9.1q-1.5 2.2-3.7 3.7 0.1 0.3 0.1 1 0 2.9-0.9 5.8t-2.6 5.5-4.1 4.7-5.7 3.3-7.2 1.2q-6.1 0-11.1-3.3 0.8 0.1 1.7 0.1 5 0 9-3-2.4-0.1-4.2-1.5t-2.6-3.5q0.8 0.1 1.4 0.1 1 0 1.9-0.3-2.5-0.5-4.1-2.5t-1.7-4.6v0q1.5 0.8 3.3 0.9-1.5-1-2.4-2.6t-0.8-3.4q0-2 0.9-3.7 2.7 3.4 6.6 5.4t8.3 2.2q-0.2-0.9-0.2-1.7 0-3 2.1-5.1t5.1-2.1q3.2 0 5.3 2.3 2.4-0.5 4.6-1.7-0.8 2.5-3.2 3.9 2.1-0.2 4.2-1.1z"
                  />
                </g>
              </svg>
              <span
                class="WebsiteListing-title"
              >
                <span>
                  Twitter
                </span>
              </span>
            </a>
          </article>
          <article
            class="WebsiteListing"
          >
            <a
              href="https://instagram.com/mynameisviii"
              rel="noopener"
              target="_blank"
              title="Connect with Viii on Instagram"
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle"
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="m33.4 31.8v-14.4h-3q0.4 1.4 0.4 2.9 0 2.8-1.4 5.2t-3.9 3.7-5.3 1.4q-4.4 0-7.6-3t-3.1-7.3q0-1.5 0.5-2.9h-3.2v14.4q0 0.6 0.4 1t1 0.4h23.8q0.6 0 1-0.4t0.4-1z m-6.3-11.9q0-2.7-2.1-4.7t-4.8-1.9q-2.9 0-4.9 1.9t-2 4.7 2 4.8 4.9 1.9q2.8 0 4.8-1.9t2.1-4.8z m6.3-8v-3.7q0-0.6-0.4-1.1t-1.1-0.4h-3.9q-0.7 0-1.1 0.4t-0.5 1.1v3.7q0 0.6 0.5 1.1t1.1 0.4h3.9q0.6 0 1.1-0.4t0.4-1.1z m3.9-4.6v25.4q0 1.9-1.3 3.1t-3.1 1.3h-25.5q-1.8 0-3.1-1.3t-1.3-3.1v-25.4q0-1.9 1.3-3.1t3.1-1.3h25.5q1.8 0 3.1 1.3t1.3 3.1z"
                  />
                </g>
              </svg>
              <span
                class="WebsiteListing-title"
              >
                <span>
                  Instagram
                </span>
              </span>
            </a>
          </article>
          <article
            class="WebsiteListing"
          >
            <a
              href="https://soundcloud.com/iamviii"
              rel="noopener"
              target="_blank"
              title="Connect with Viii on SoundCloud"
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle"
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="m13.7 28.3l0.3-4.2-0.3-9.1q0-0.2-0.1-0.3t-0.3-0.2q-0.2 0-0.3 0.2t-0.1 0.3l-0.2 9.1 0.2 4.2q0 0.2 0.1 0.3t0.3 0.1q0.4 0 0.4-0.4z m5.2-0.5l0.2-3.7-0.2-10.2q0-0.3-0.2-0.4-0.2-0.1-0.3-0.1t-0.3 0.1q-0.2 0.1-0.2 0.4l0 0.1-0.2 10.1q0 0 0.2 4.1v0.1q0 0.1 0.1 0.3 0.1 0.2 0.4 0.2 0.2 0 0.3-0.2 0.2-0.1 0.2-0.4z m-18.3-5.9l0.4 2.2-0.4 2.2q0 0.2-0.1 0.2t-0.2-0.2l-0.3-2.2 0.3-2.2q0-0.2 0.2-0.2t0.1 0.2z m1.5-1.4l0.5 3.6-0.5 3.6q0 0.1-0.2 0.1-0.1 0-0.1-0.1l-0.4-3.6 0.4-3.6q0-0.2 0.1-0.2 0.2 0 0.2 0.2z m1.6-0.7l0.5 4.3-0.5 4.2q0 0.2-0.2 0.2-0.1 0-0.2-0.2l-0.3-4.2 0.3-4.3q0.1-0.2 0.2-0.2 0.2 0 0.2 0.2z m1.7-0.1l0.4 4.4-0.4 4.3q-0.1 0.2-0.3 0.2-0.2 0-0.2-0.2l-0.4-4.3 0.4-4.4q0-0.2 0.2-0.2 0.2 0 0.3 0.2z m1.6 0.3l0.4 4.1-0.4 4.3q0 0.3-0.3 0.3-0.1 0-0.1-0.1t-0.1-0.2l-0.4-4.3 0.4-4.1q0-0.1 0.1-0.2t0.1 0q0.3 0 0.3 0.2z m1.7-2.5l0.3 6.6-0.3 4.3q0 0.1-0.1 0.2t-0.2 0.1q-0.3 0-0.3-0.3l-0.4-4.3 0.4-6.6q0-0.4 0.3-0.4 0.1 0 0.2 0.1t0.1 0.3z m1.6-1.5l0.3 8.1-0.3 4.3q0 0.2-0.1 0.3t-0.2 0.1q-0.3 0-0.4-0.4l-0.2-4.3 0.2-8.1q0.1-0.4 0.4-0.4 0.1 0 0.2 0.1t0.1 0.3z m1.7-0.7l0.3 8.8-0.3 4.3q0 0.3-0.4 0.3-0.3 0-0.3-0.3l-0.3-4.3 0.3-8.8q0-0.2 0.1-0.3t0.2-0.1q0.2 0 0.3 0.1t0.1 0.3z m6.9 12.9z m-3.5-13l0.3 8.9-0.3 4.2q0 0.2-0.1 0.3t-0.3 0.1-0.3-0.1-0.2-0.3l-0.2-4.2 0.2-8.9q0-0.2 0.2-0.3t0.3-0.2 0.3 0.2 0.1 0.3z m1.8 0.3l0.2 8.6-0.2 4.2q0 0.2-0.2 0.3t-0.3 0.1-0.3-0.1-0.2-0.3l-0.2-4.2 0.2-8.6q0-0.2 0.2-0.3t0.3-0.2 0.3 0.2 0.2 0.3z m3.7 8.6l-0.3 4.1q0 0.2-0.1 0.4t-0.4 0.1-0.4-0.1-0.2-0.4l-0.1-2-0.1-2.1 0.2-11.1v-0.1q0.1-0.2 0.2-0.4 0.2-0.1 0.4-0.1 0.1 0 0.2 0.1 0.3 0.1 0.3 0.4z m19.4-0.3q0 2-1.4 3.5t-3.5 1.4h-13.8q-0.2 0-0.4-0.2t-0.1-0.3v-15.8q0-0.4 0.5-0.6 1.5-0.6 3.1-0.6 3.5 0 6 2.3t2.8 5.7q0.9-0.4 1.9-0.4 2 0 3.5 1.5t1.4 3.5z"
                  />
                </g>
              </svg>
              <span
                class="WebsiteListing-title"
              >
                <span>
                  SoundCloud
                </span>
              </span>
            </a>
          </article>
          <article
            class="WebsiteListing"
          >
            <a
              href="https://genius.com/artists/Viii"
              rel="noopener"
              target="_blank"
              title="Connect with Viii on Genius"
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle"
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="M9.9,10.1c-0.1,0.1-0.1,0.1-0.2,0.2C8,11.9,7,14.2,7,16.8c0,2.5,1,4.9,2.7,6.5c0.4,0.4,0.9,0.8,1.5,1.2l0,0c0,0,0.1,0,0.1,0 c0.2,0,0.3-0.1,0.3-0.3c0,0,0-0.1,0-0.1l0,0C11.2,23.1,11,22,11,20.8c0-2.7,1.1-5.1,2.8-6.9c0,0,0,0,0,0c0,0,0,0,0,0l0,0 c0,0,0.1-0.1,0.1-0.2c0,0,0,0,0,0h0v-3.5c0-0.2-0.1-0.3-0.3-0.3h-3.5l0,0C10,10,10,10,9.9,10.1z"
                  />
                  <path
                    d="M20.9,10.3v2.3v0.7v0.5v0l0,0c0,1.9-1.4,3.4-3.2,3.5l0,0c-0.1,0-0.3,0.1-0.3,0.3c0,0,0,0,0,0l0,0c0,0,0,0,0,0c0,0,0,0,0,0 c0.1,0.8,0.4,1.5,0.9,2c0,0,0,0,0,0c0,0,0.1,0.1,0.1,0.1c0,0,0,0,0,0c0,0,0.1,0.1,0.1,0.1c0,0,0,0,0,0c0,0,0.1,0.1,0.1,0.1 c0,0,0,0,0,0c0,0,0.1,0,0.1,0.1c0,0,0,0,0,0c0,0,0.1,0,0.1,0.1c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0.1c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0 c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0.1,0,0.1,0 c0,0,0.1,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0,0,0.1,0 c0,0,0.1,0,0.1,0c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0,0,0,0c0.1,0,0.1,0,0.2,0c0,0,0,0,0,0c0,0,0,0,0,0c0,0,0,0,0.1,0 c1.9,0,3.4-1.6,3.4-3.5v-1.7v-0.8c0-0.2,0.1-0.3,0.3-0.3h1c0.2,0,0.3-0.1,0.3-0.3c0,0,0,0,0-0.1c-0.3-1.5-1-2.9-1.9-4l0,0 C23.9,10,23.8,10,23.8,10c0,0,0,0,0,0l0,0h-1.2h-0.2h-1.1C21,10,20.9,10.1,20.9,10.3z"
                  />
                  <path
                    d="M31.3,10.4C31.3,10.5,31.3,10.5,31.3,10.4L31.3,10.4c0,0.1,0,0.1,0,0.1c0,0,0,0,0,0c0.7,1.8,1.1,3.8,1.1,5.8 c0,8.9-7.2,16-16,16c-2.1,0-4-0.4-5.8-1.1l0,0c0,0-0.1,0-0.1,0c-0.2,0-0.3,0.1-0.3,0.3c0,0.1,0,0.2,0.1,0.2l0,0 C13,34.4,16.7,36,20.8,36C29.2,36,36,29.2,36,20.8c0-4.1-1.6-7.8-4.2-10.5l0,0c-0.1-0.1-0.1-0.1-0.2-0.1 C31.4,10.2,31.3,10.3,31.3,10.4z"
                  />
                </g>
              </svg>
              <span
                class="WebsiteListing-title"
              >
                <span>
                  Genius
                </span>
              </span>
            </a>
          </article>
        </div>
        <div
          class="Home-connect-press"
        >
          <p>
            <span>
              For booking and press enquiries, contact
            </span>
             
            <a
              href="mailto:mgmt@mynameisviii.com"
            >
              mgmt@mynameisviii.com
            </a>
            .
          </p>
        </div>
      </div>
    </section>
  </div>,
]
`;

exports[`[routes] <Index /> renders correctly with no news results 1`] = `
Array [
  <header
    class="PageHeader"
  >
    <h1>
      <span>
        My name is Viii: a painter of frequencies and thoughts
      </span>
    </h1>
  </header>,
  <div
    class="Home"
  >
    <section
      class="Home-bio"
    >
      <div
        class="Home-bio-content"
      >
        <h2>
          <span>
            Biography
          </span>
        </h2>
        <p>
          <span>
            Viii is a New Zealand-born singer, songwriter, multi-instramentalist and producer. Known for his ability to take characteristics from his eclectic musical background to create a broad palette to paint an interesting and unique canvas.
          </span>
        </p>
        <p>
          <span>
            Drawing from influences such as ✝✝✝ (Crosses), Nine Inch Nails, Puscifer, Banks, Etta Bond, Massive Attack, Portishead and many more, creating a colourful source of inspiration.
          </span>
        </p>
        <p>
          <span>
            Lyrically, Viii has a distinct common ground of self-reflection and understanding, often abstracting the subject in some form – either writing symbolically or from an alternate perspective about personal life experiences or abstract thoughts.
          </span>
        </p>
        <p>
          <span>
            Outside of the music, Viii also handles his own artistic direction and other aspects surrounding performances, such as photography, graphic design, makeup artistry and fashion.
          </span>
        </p>
        <p>
          <span>
            Viii currently releases music under his own independent label, Voodoo Creation Records.
          </span>
        </p>
      </div>
    </section>
    <section
      class="Home-connect"
    >
      <div
        class="Home-connect-content"
      >
        <h2>
          <span>
            Connect with Viii
          </span>
        </h2>
        <div
          class="Home-connect-websites"
        >
          <article
            class="WebsiteListing"
          >
            <a
              href="https://open.spotify.com/artist/59s4iD384WECjyZyUmZ18G?si=rlWWtIUNS1uvdLD5BzqxvQ"
              rel="noopener"
              target="_blank"
              title="Connect with Viii on Spotify"
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle"
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="m28.2 27q0-0.7-0.7-1.1-4.3-2.6-10-2.6-3 0-6.4 0.8-0.9 0.2-0.9 1.1 0 0.5 0.3 0.8t0.8 0.3q0.1 0 0.8-0.2 2.9-0.6 5.4-0.6 5.1 0 8.9 2.3 0.4 0.3 0.7 0.3 0.4 0 0.7-0.3t0.4-0.8z m2.1-4.8q0-0.9-0.8-1.4-5.3-3.1-12.2-3.1-3.4 0-6.8 0.9-1 0.3-1 1.5 0 0.5 0.3 0.9t1 0.4q0.1 0 0.8-0.2 2.7-0.7 5.6-0.7 6.2 0 10.9 2.8 0.5 0.3 0.9 0.3 0.5 0 0.9-0.4t0.4-1z m2.4-5.5q0-1.1-0.9-1.6-2.8-1.6-6.5-2.5t-7.7-0.8q-4.5 0-8.1 1.1-0.5 0.1-0.9 0.5t-0.3 1.1q0 0.7 0.5 1.2t1.1 0.4q0.2 0 0.9-0.1 3-0.9 6.8-0.9 3.6 0 7 0.8t5.6 2.1q0.5 0.3 0.9 0.3 0.7 0 1.1-0.5t0.5-1.1z m4.6 3.3q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                  />
                </g>
              </svg>
              <span
                class="WebsiteListing-title"
              >
                <span>
                  Spotify
                </span>
              </span>
            </a>
          </article>
          <article
            class="WebsiteListing"
          >
            <a
              href="https://facebook.com/mynameisviii"
              rel="noopener"
              target="_blank"
              title="Connect with Viii on Facebook"
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle"
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="m30.9 2.9q2.6 0 4.5 1.8t1.9 4.6v21.4q0 2.7-1.9 4.6t-4.5 1.8h-4.2v-13.2h4.4l0.7-5.2h-5.1v-3.3q0-1.3 0.5-1.9t2-0.6l2.8 0v-4.7q-1.5-0.2-4-0.2-3.1 0-4.9 1.8t-1.8 5.1v3.8h-4.5v5.2h4.5v13.2h-11.9q-2.6 0-4.5-1.8t-1.9-4.6v-21.4q0-2.7 1.9-4.6t4.5-1.8h21.5z"
                  />
                </g>
              </svg>
              <span
                class="WebsiteListing-title"
              >
                <span>
                  Facebook
                </span>
              </span>
            </a>
          </article>
          <article
            class="WebsiteListing"
          >
            <a
              href="https://twitter.com/mynameisviii"
              rel="noopener"
              target="_blank"
              title="Connect with Viii on Twitter"
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle"
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="m37.7 9.1q-1.5 2.2-3.7 3.7 0.1 0.3 0.1 1 0 2.9-0.9 5.8t-2.6 5.5-4.1 4.7-5.7 3.3-7.2 1.2q-6.1 0-11.1-3.3 0.8 0.1 1.7 0.1 5 0 9-3-2.4-0.1-4.2-1.5t-2.6-3.5q0.8 0.1 1.4 0.1 1 0 1.9-0.3-2.5-0.5-4.1-2.5t-1.7-4.6v0q1.5 0.8 3.3 0.9-1.5-1-2.4-2.6t-0.8-3.4q0-2 0.9-3.7 2.7 3.4 6.6 5.4t8.3 2.2q-0.2-0.9-0.2-1.7 0-3 2.1-5.1t5.1-2.1q3.2 0 5.3 2.3 2.4-0.5 4.6-1.7-0.8 2.5-3.2 3.9 2.1-0.2 4.2-1.1z"
                  />
                </g>
              </svg>
              <span
                class="WebsiteListing-title"
              >
                <span>
                  Twitter
                </span>
              </span>
            </a>
          </article>
          <article
            class="WebsiteListing"
          >
            <a
              href="https://instagram.com/mynameisviii"
              rel="noopener"
              target="_blank"
              title="Connect with Viii on Instagram"
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle"
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="m33.4 31.8v-14.4h-3q0.4 1.4 0.4 2.9 0 2.8-1.4 5.2t-3.9 3.7-5.3 1.4q-4.4 0-7.6-3t-3.1-7.3q0-1.5 0.5-2.9h-3.2v14.4q0 0.6 0.4 1t1 0.4h23.8q0.6 0 1-0.4t0.4-1z m-6.3-11.9q0-2.7-2.1-4.7t-4.8-1.9q-2.9 0-4.9 1.9t-2 4.7 2 4.8 4.9 1.9q2.8 0 4.8-1.9t2.1-4.8z m6.3-8v-3.7q0-0.6-0.4-1.1t-1.1-0.4h-3.9q-0.7 0-1.1 0.4t-0.5 1.1v3.7q0 0.6 0.5 1.1t1.1 0.4h3.9q0.6 0 1.1-0.4t0.4-1.1z m3.9-4.6v25.4q0 1.9-1.3 3.1t-3.1 1.3h-25.5q-1.8 0-3.1-1.3t-1.3-3.1v-25.4q0-1.9 1.3-3.1t3.1-1.3h25.5q1.8 0 3.1 1.3t1.3 3.1z"
                  />
                </g>
              </svg>
              <span
                class="WebsiteListing-title"
              >
                <span>
                  Instagram
                </span>
              </span>
            </a>
          </article>
          <article
            class="WebsiteListing"
          >
            <a
              href="https://soundcloud.com/iamviii"
              rel="noopener"
              target="_blank"
              title="Connect with Viii on SoundCloud"
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle"
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="m13.7 28.3l0.3-4.2-0.3-9.1q0-0.2-0.1-0.3t-0.3-0.2q-0.2 0-0.3 0.2t-0.1 0.3l-0.2 9.1 0.2 4.2q0 0.2 0.1 0.3t0.3 0.1q0.4 0 0.4-0.4z m5.2-0.5l0.2-3.7-0.2-10.2q0-0.3-0.2-0.4-0.2-0.1-0.3-0.1t-0.3 0.1q-0.2 0.1-0.2 0.4l0 0.1-0.2 10.1q0 0 0.2 4.1v0.1q0 0.1 0.1 0.3 0.1 0.2 0.4 0.2 0.2 0 0.3-0.2 0.2-0.1 0.2-0.4z m-18.3-5.9l0.4 2.2-0.4 2.2q0 0.2-0.1 0.2t-0.2-0.2l-0.3-2.2 0.3-2.2q0-0.2 0.2-0.2t0.1 0.2z m1.5-1.4l0.5 3.6-0.5 3.6q0 0.1-0.2 0.1-0.1 0-0.1-0.1l-0.4-3.6 0.4-3.6q0-0.2 0.1-0.2 0.2 0 0.2 0.2z m1.6-0.7l0.5 4.3-0.5 4.2q0 0.2-0.2 0.2-0.1 0-0.2-0.2l-0.3-4.2 0.3-4.3q0.1-0.2 0.2-0.2 0.2 0 0.2 0.2z m1.7-0.1l0.4 4.4-0.4 4.3q-0.1 0.2-0.3 0.2-0.2 0-0.2-0.2l-0.4-4.3 0.4-4.4q0-0.2 0.2-0.2 0.2 0 0.3 0.2z m1.6 0.3l0.4 4.1-0.4 4.3q0 0.3-0.3 0.3-0.1 0-0.1-0.1t-0.1-0.2l-0.4-4.3 0.4-4.1q0-0.1 0.1-0.2t0.1 0q0.3 0 0.3 0.2z m1.7-2.5l0.3 6.6-0.3 4.3q0 0.1-0.1 0.2t-0.2 0.1q-0.3 0-0.3-0.3l-0.4-4.3 0.4-6.6q0-0.4 0.3-0.4 0.1 0 0.2 0.1t0.1 0.3z m1.6-1.5l0.3 8.1-0.3 4.3q0 0.2-0.1 0.3t-0.2 0.1q-0.3 0-0.4-0.4l-0.2-4.3 0.2-8.1q0.1-0.4 0.4-0.4 0.1 0 0.2 0.1t0.1 0.3z m1.7-0.7l0.3 8.8-0.3 4.3q0 0.3-0.4 0.3-0.3 0-0.3-0.3l-0.3-4.3 0.3-8.8q0-0.2 0.1-0.3t0.2-0.1q0.2 0 0.3 0.1t0.1 0.3z m6.9 12.9z m-3.5-13l0.3 8.9-0.3 4.2q0 0.2-0.1 0.3t-0.3 0.1-0.3-0.1-0.2-0.3l-0.2-4.2 0.2-8.9q0-0.2 0.2-0.3t0.3-0.2 0.3 0.2 0.1 0.3z m1.8 0.3l0.2 8.6-0.2 4.2q0 0.2-0.2 0.3t-0.3 0.1-0.3-0.1-0.2-0.3l-0.2-4.2 0.2-8.6q0-0.2 0.2-0.3t0.3-0.2 0.3 0.2 0.2 0.3z m3.7 8.6l-0.3 4.1q0 0.2-0.1 0.4t-0.4 0.1-0.4-0.1-0.2-0.4l-0.1-2-0.1-2.1 0.2-11.1v-0.1q0.1-0.2 0.2-0.4 0.2-0.1 0.4-0.1 0.1 0 0.2 0.1 0.3 0.1 0.3 0.4z m19.4-0.3q0 2-1.4 3.5t-3.5 1.4h-13.8q-0.2 0-0.4-0.2t-0.1-0.3v-15.8q0-0.4 0.5-0.6 1.5-0.6 3.1-0.6 3.5 0 6 2.3t2.8 5.7q0.9-0.4 1.9-0.4 2 0 3.5 1.5t1.4 3.5z"
                  />
                </g>
              </svg>
              <span
                class="WebsiteListing-title"
              >
                <span>
                  SoundCloud
                </span>
              </span>
            </a>
          </article>
          <article
            class="WebsiteListing"
          >
            <a
              href="https://genius.com/artists/Viii"
              rel="noopener"
              target="_blank"
              title="Connect with Viii on Genius"
            >
              <svg
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle"
                viewBox="0 0 40 40"
                width="1em"
              >
                <g>
                  <path
                    d="M9.9,10.1c-0.1,0.1-0.1,0.1-0.2,0.2C8,11.9,7,14.2,7,16.8c0,2.5,1,4.9,2.7,6.5c0.4,0.4,0.9,0.8,1.5,1.2l0,0c0,0,0.1,0,0.1,0 c0.2,0,0.3-0.1,0.3-0.3c0,0,0-0.1,0-0.1l0,0C11.2,23.1,11,22,11,20.8c0-2.7,1.1-5.1,2.8-6.9c0,0,0,0,0,0c0,0,0,0,0,0l0,0 c0,0,0.1-0.1,0.1-0.2c0,0,0,0,0,0h0v-3.5c0-0.2-0.1-0.3-0.3-0.3h-3.5l0,0C10,10,10,10,9.9,10.1z"
                  />
                  <path
                    d="M20.9,10.3v2.3v0.7v0.5v0l0,0c0,1.9-1.4,3.4-3.2,3.5l0,0c-0.1,0-0.3,0.1-0.3,0.3c0,0,0,0,0,0l0,0c0,0,0,0,0,0c0,0,0,0,0,0 c0.1,0.8,0.4,1.5,0.9,2c0,0,0,0,0,0c0,0,0.1,0.1,0.1,0.1c0,0,0,0,0,0c0,0,0.1,0.1,0.1,0.1c0,0,0,0,0,0c0,0,0.1,0.1,0.1,0.1 c0,0,0,0,0,0c0,0,0.1,0,0.1,0.1c0,0,0,0,0,0c0,0,0.1,0,0.1,0.1c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0.1c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0 c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0.1,0,0.1,0 c0,0,0.1,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0,0,0.1,0 c0,0,0.1,0,0.1,0c0,0,0,0,0.1,0c0,0,0.1,0,0.1,0c0,0,0,0,0,0c0.1,0,0.1,0,0.2,0c0,0,0,0,0,0c0,0,0,0,0,0c0,0,0,0,0.1,0 c1.9,0,3.4-1.6,3.4-3.5v-1.7v-0.8c0-0.2,0.1-0.3,0.3-0.3h1c0.2,0,0.3-0.1,0.3-0.3c0,0,0,0,0-0.1c-0.3-1.5-1-2.9-1.9-4l0,0 C23.9,10,23.8,10,23.8,10c0,0,0,0,0,0l0,0h-1.2h-0.2h-1.1C21,10,20.9,10.1,20.9,10.3z"
                  />
                  <path
                    d="M31.3,10.4C31.3,10.5,31.3,10.5,31.3,10.4L31.3,10.4c0,0.1,0,0.1,0,0.1c0,0,0,0,0,0c0.7,1.8,1.1,3.8,1.1,5.8 c0,8.9-7.2,16-16,16c-2.1,0-4-0.4-5.8-1.1l0,0c0,0-0.1,0-0.1,0c-0.2,0-0.3,0.1-0.3,0.3c0,0.1,0,0.2,0.1,0.2l0,0 C13,34.4,16.7,36,20.8,36C29.2,36,36,29.2,36,20.8c0-4.1-1.6-7.8-4.2-10.5l0,0c-0.1-0.1-0.1-0.1-0.2-0.1 C31.4,10.2,31.3,10.3,31.3,10.4z"
                  />
                </g>
              </svg>
              <span
                class="WebsiteListing-title"
              >
                <span>
                  Genius
                </span>
              </span>
            </a>
          </article>
        </div>
        <div
          class="Home-connect-press"
        >
          <p>
            <span>
              For booking and press enquiries, contact
            </span>
             
            <a
              href="mailto:mgmt@mynameisviii.com"
            >
              mgmt@mynameisviii.com
            </a>
            .
          </p>
        </div>
      </div>
    </section>
  </div>,
]
`;
